--- a/asset/css/flags.css
+++ b/asset/css/flags.css
@@ -3,6 +3,21 @@
     margin: 0;
 }
 
+section{ 
+    margin: 2%;
+    margin-left: 9%;
+    line-height: 1.5rem;
+}
+
+p{
+    font: 1.5rem Arial;
+}
+
+li{
+    font: 1.2rem Calibri;
+    margin-left: 4%;
+}
+
 div{
     display: inline-block;
     width: 25vw;
@@ -10,6 +25,7 @@ div{
     position: relative;
     top: 3vh;
     left: 3vw;
+    margin: 5vh 2vw;
 }
 
 #eth{
@@ -46,6 +62,7 @@ div{
 #gam div{
     top: 0;
     left: 0;
+    margin: 0;
     height: 8vh;
     background-color: blue;
     border-top: solid 1vh whitesmoke;
@@ -61,6 +78,7 @@ div{
 #jpn{
     width: 5vw;
     margin: 10vh 10vw;
+    margin-left: 12.5vw;
     background-color: red;
     border-radius: 100%;
 }
@@ -82,7 +100,7 @@ div{
 }
 
 #bot{
-    top: -7vh;
+    top: -12vh;
     border-top: solid 10vh teal;
     border-bottom: solid 10vh teal;
 }
@@ -90,6 +108,7 @@ div{
 #bot div{
     top: 0;
     left: 0;
+    margin: 0;
     height: 8vh;
     background-color: black;
     border-top: solid 1vh whitesmoke;
@@ -112,6 +131,7 @@ div{
 #mau div{
     top: 0;
     left: 0;
+    margin: 0;
     height: 0;
     border-top: solid 7.5vh blue;
     border-bottom: solid 7.5vh yellow;
