--- a/asset/css/base_style.css
+++ b/asset/css/base_style.css
@@ -51,7 +51,6 @@ p{
 
 section{
     clear: left;
-    border-bottom: solid 1px;
 }
 
 footer{
@@ -59,6 +58,7 @@ footer{
     font-style: italic;
     font-weight: bold;
     padding: 2%;
+    border-top: solid 1px;
     border-bottom: solid 1px;
 }
 
